--- a/ios/TourismApp1/Info.plist
+++ b/ios/TourismApp1/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,23 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>CormorantGaramond-Bold.ttf</string>
+		<string>CormorantGaramond-Light.ttf</string>
+		<string>CormorantGaramond-Medium.ttf</string>
+		<string>CormorantGaramond-Regular.ttf</string>
+		<string>CormorantGaramond-SemiBold.ttf</string>
+		<string>CormorantInfant-Bold.ttf</string>
+		<string>CormorantInfant-Light.ttf</string>
+		<string>CormorantInfant-Medium.ttf</string>
+		<string>CormorantInfant-Regular.ttf</string>
+		<string>CormorantInfant-SemiBold.ttf</string>
+		<string>Harmattan-Bold.ttf</string>
+		<string>Harmattan-Medium.ttf</string>
+		<string>Harmattan-Regular.ttf</string>
+		<string>Harmattan-SemiBold.ttf</string>
+		<string>Lustria-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
