--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^6.3.29",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.9.0",
