--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/blur": "^4.4.0",
     "@react-native-firebase/app": "^19.1.0",
     "@react-native-firebase/auth": "^19.1.0",
     "@react-native-firebase/firestore": "^19.1.0",
